update title in sitemap

--- a/huu-ich/cau-chuyen/bai-hoc-pho-thong.html
+++ b/huu-ich/cau-chuyen/bai-hoc-pho-thong.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bài học phổ thông</title>
+<title>Những bài học trong chương trình phổ thông có ích không?</title>
 <meta name="description" content="Các bài học ở trường phổ thông rất cần trong cuộc sống" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, phổ thông">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/bai-hoc-pho-thong">
@@ -230,8 +230,7 @@ https://lehboi.github.io/huu-ich/cau-chuyen/bai-hoc-pho-thong
     </amp-facebook-like>
   </div>
 
-  <h1>Bài học phổ thông</h1>
-  <h2>Những bài học trong chương trình phổ thông có ích không?</h2>
+  <h1>Những bài học trong chương trình phổ thông có ích không?</h1>
   <p>Chúng ta vẫn thường nghe được nhiều người than rằng học xong 12 năm học phổ thông, ra đời chẳng dùng được bao nhiêu kiến thức vào cuộc sống. Có đúng vậy không?</p>
   <p>Tôi cho rằng nhiều người đã quên mất những bài học phổ thông và đến khi cần dùng kiến thức đó thì không có để dùng và luôn nghĩ rằng kiến thức phổ thông <i>không dùng được</i> trong cuộc sống. Đúng ra thì kiến thức <i>không được dùng</i> trong cuộc sống, không được dùng vì không biết cách dùng.</p>
   <p>Nếu thời xưa chương trình học lịch sử được biên soạn đầy đủ, và tướng Ô Mã Nhi của Mông Cổ được học (hoặc chịu học) kỹ môn lịch sử thế giới như học sinh phổ thông Việt Nam thì có thể đã tránh bị bắt sống trên <a href="https://vi.wikipedia.org/wiki/Tr%E1%BA%ADn_B%E1%BA%A1ch_%C4%90%E1%BA%B1ng_(1288)" target='_blank'>sông Bạch Đằng</a> và sau đó bị chết. Nếu học kỹ, hẳn Ô Mã Nhi phải biết rằng sông Bạch Đằng là nơi quân xăm lăng Nam Hán và Tống đã bị tiêu diệt.</p>
@@ -301,7 +300,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
