--- a/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
+++ b/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Ghi chép và tính hiệu quả những vụ đầu tư dài hạn</title>
+<title>Ghi sổ và tính hiệu quả khi đầu tư dài hạn</title>
 <meta name="description" content="Cách ghi chép số liệu và tính hiệu quả các vụ đầu tư dài hạn: bảo hiểm nhân thọ, quỹ đầu tư, bất động sản" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">
@@ -230,7 +230,7 @@ https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han
     </amp-facebook-like>
   </div>
 
-  <h1>Đầu tư dài hạn</h1>
+  <h1>Cách ghi sổ  và tính hiệu quả khi đầu tư dài hạn</h1>
   <p>Trang này hướng dẫn cách ghi chép và tính hiệu quả các khoản tích luỹ lâu năm như <a href="/huu-ich/cac-loai-bao-hiem/">bảo hiểm nhân thọ</a>, <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>, bất động sản… Chúng ta sẽ dùng các phần mềm spreadsheet  để ghi chép và dùng hàm <a href="/kinh-nghiem/may-tinh/ham-tai-chinh">XIRR</a> để tính hiệu quả. Tôi đã dùng cách này để <a href="../hieu-qua-dau-tu">so sánh các vụ đầu tư</a> của tôi.</p>
   <p>Các bạn có thể xem và chép <a href="https://docs.google.com/spreadsheets/d/1ZwOJE5qAzLFzQoZZci4XJGP0YN0JktclOYgJIAp6As8/edit?usp=sharing" target='_blank'>file mẫu ĐTDH</a> về tài khoản Google Drive của riêng bạn để dùng. Trong file mẫu ĐTDH này có ba ví dụ về ba cách tích luỹ: bảo hiểm nhân thọ, quỹ đầu tư, bất động sản.</p>
   <p>Mỗi khoản tích luỹ (mỗi hợp đồng bảo hiểm, mỗi tài khoản quỹ đầu tư, mỗi căn nhà, mỗi miếng đất…) được ghi thành một trang trong file ĐTDH. Cột A ghi ngày giao dịch, cột B ghi số tiền giao dịch (đưa tiền vào thì ghi số âm, rút tiền ra dùng thì ghi số dương). Ô B1 chứa kết quả của hàm XIRR, công thức trong ô này cần được bao gồm tất cả các dòng ghi giao dịch bên dưới. Ô A2 là ngày hôm nay (hàm today) hoặc ngày cuối cùng dùng hết khoản tích luỹ. Các giao dịch nên ghi theo thứ tự mới trên, cũ dưới.
