--- a/kinh-nghiem/chu-viet/unicode.html
+++ b/kinh-nghiem/chu-viet/unicode.html
@@ -230,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/chu-viet/unicode
     </amp-facebook-like>
   </div>
 
-  <h1>Unicode</h1>
+  <h1>Chữ Việt trong Unicode</h1>
   <table class="noborder">
   <tbody>
   <tr>
