--- a/kinh-nghiem/may-tinh/OTT-apps.html
+++ b/kinh-nghiem/may-tinh/OTT-apps.html
@@ -231,28 +231,64 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
-  <h1>So sánh các OTT app dùng để liên lạc trên máy điện thoại</h1>
-<p>Có rất nhiều công cụ để liên lạc qua smartphone với chi phí thấp. Bảng dưới đây so sánh chức năng các công cụ đó.
-<br>Chức năng gửi lời nhắn bằng giọng nói của Viber, WhatsApp và Zalo rất tiện. Khi bạn gọi ai đó mà họ không trả lời thì bạn để lại lời nhắn bằng giọng nói để họ biết bạn cần nói về việc gì. Nhắn bằng giọng nói tiện hơn so với nhắn bằng chữ.</p>
+  <h1>So-sánh các OTT app dùng để liên-lạc trên máy điện-thoại</h1>
+<p>Khi dùng smartphone, chúng ta có rất nhiều công-cụ để liên-lạc với chi-phí thấp. Bảng dưới đây so-sánh chức-năng liên-lạc của các công-cụ đó.</p>
 <div>
 <table cellspacing="1" cellpadding="1" class="withborder">
   <tbody>
-    <tr><th></th><th colspan="2" style="text-align:center;">text</th><th colspan="2" style="text-align:center;">voice</th><th>video</th><th>dùng trên web</th></tr>
-    <tr><td></td><td>nhóm</td><td>gửi file</td><td>nhóm</td><td>lời nhắn</td><td></td><td></td></tr>
-    <tr><td>WhatsApp</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td></tr>
-    <tr><td>Hangout</td><td>✔</td><td>✔</td><td>✔</td><td></td><td>✔</td><td>✔</td></tr>
-    <tr><td>Messenger</td><td>✔</td><td>✔</td><td>✔</td><td></td><td>✔</td><td>✔</td></tr>
-    <tr><td>Zalo</td><td>✔</td><td>✔</td><td></td><td>✔</td><td>✔</td><td>✔</td></tr>
-    <tr><td>Viber</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td><td></td></tr>
-    <tr><td><a href="RCS">RCS</a></td><td>✔</td><td>✔</td><td></td><td></td><td></td><td></td></tr>
-    <tr><td><a href="spam-call">TrueCaller</a></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td><a href="goi-cuoc-di-dong-noi-mang">2G phone</a></td><td></td><td>✔</td><td><a href="conferencecall">✔</a></td><td>✔</td><td></td><td></td></tr>
+    <tr><th></th>
+      <th colspan="2" style="text-align:center;">text</th>
+      <th colspan="2" style="text-align:center;">voice</th>
+      <th>video</th><th>dùng trên web</th>
+    </tr>
+    <tr><td></td>
+      <td>nhóm</td><td>gửi file</td>
+      <td>nhóm</td><td>lời nhắn</td>
+      <td></td><td></td>
+    </tr>
+    <tr><td>WhatsApp</td>
+      <td>✔</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td>
+    </tr>
+    <tr><td>Hangout</td>
+      <td>✔</td><td>✔</td><td>✔</td><td> </td><td>✔</td><td>✔</td>
+    </tr>
+    <tr><td>Messenger</td>
+      <td>✔</td><td>✔</td><td>✔</td><td> </td><td>✔</td><td>✔</td>
+    </tr>
+    <tr><td>Zalo</td>
+      <td>✔</td><td>✔</td><td> </td><td>✔</td><td>✔</td><td>✔</td>
+    </tr>
+    <tr><td>Viber</td>
+      <td>✔</td><td>✔</td><td>✔</td><td>✔</td><td>✔</td><td> </td>
+    </tr>
+    <tr><td><a href="RCS">RCS</a></td>
+      <td>✔</td><td>✔</td><td> </td><td> </td><td> </td><td> </td>
+    </tr>
+    <tr><td><a href="goi-cuoc-di-dong-noi-mang">2G phone</a></td>
+      <td> </td><td>✔</td><td><a href="conferencecall">✔</a></td><td>✔</td><td></td><td></td>
+    </tr>
 </tbody>
 </table>
+<p>Chức-năng gửi lời-nhắn bằng giọng-nói của Viber, WhatsApp, Zalo và điện-thoại di-động rất tiện. Khi bạn gọi ai đó mà họ không trả-lời thì bạn để lại lời-nhắn bằng giọng-nói để họ biết bạn cần nói về việc gì. Nhắn bằng giọng-nói tiện hơn so với nhắn bằng chữ.
+<br>Tuy-nhiên, người Việt-Nam vẫn chưa quen với việc gửi và nghe lời-nhắn bằng giọng-nói. Các thuê-bao điện-thoại di-động đã được tự-động dùng dịch-vụ hộp-thư-thoại để nhận lời-nhắn nhưng rất nhiều người lúng-túng khi nghe nhắc để lại lời-nhắn và không để lại gì hết. Vì không biết dùng dịch-vụ tiện-ích đó, họ quay lại trách công-ty điện-thoại di-động đã bày ra dịch-vụ đó để làm cho họ tốn-tiền khi gọi mà không gặp người-cần-gặp 😢.
+<br>Không những không quen để lại lời-nhắn, người Việt-Nam cũng không quen nghe lời-nhắn, tôi đã nhiều lần gửi lời-nhắn bằng giọng-nói nhưng có-vẻ như không có người-nhận nào nghe.</p>
+<p>Điều đó cho thấy người-dùng cần biết cách dùng các công-cụ cho hiệu quả.
+<br>Khi tôi liên-lạc với một người lạ qua phương-tiện voice (thường là điện thoại di động) mà không được trả lời (rất thường bị như vậy) thì tôi sẽ gửi một lời nhắn text với nội dung "tự giới thiệu tôi là ai, tôi gọi về việc gì". Sau khi gửi lời-nhắn thì tôi chờ khoảng một ngày để họ kịp xem lời nhắn rồi mới gọi lại.
+<br>Đối với người đã quen-biết thì tôi cũng làm như vậy nhưng lời-nhắn sẽ ngắn hơn vì không cần giới thiệu tôi là ai.
+<br>Khi dùng lời-nhắn text thì tôi chú-ý viết cho ngắn-gọn và rõ-ràng. Ngắn-gọn để tôi đỡ tốn thời-gian gõ chữ trên máy điện-thoại, rõ-ràng để người-đọc đỡ tốn thời-gian đoán ý trong lời-nhắn. Và tôi cũng bớt phần chào-hỏi khi dùng lời-nhắn text. Thử tưởng-tượng một cuộc trao-đổi qua-lại lời-nhắn text giữa hai người bận-rộn A và B như sau:</p>
+<ul>
+  <li>A: Hi, chào B! Khoẻ không?</li>
+  <li>Mười lăm phút sau, B: Hi, chào A! Tao khoẻ. Mày khoẻ không?</li>
+  <li>Mười lăm phút sau, A: Khoẻ. Hồi nãy tao tính hỏi mày chuyện gì mà giờ quên rồi.</li>
+  <li>Mười lăm phút sau, B: Vậy hả?</li>  
+  <li>Mười lăm phút sau, A: Thôi, bye!</li>
+  <li>Mười lăm phút sau, B: Bye!</li>
+</ul>
+A và B là hai người bận-rộn nhưng họ bận xem Facebook hoặc bận chat với người khác chứ không phải bận việc làm-ăn. Người-làm-ăn không liên-lạc theo cách kém hiệu-quả như vậy.
 </div>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
