--- a/kinh-nghiem/may-tinh/gnucash.html
+++ b/kinh-nghiem/may-tinh/gnucash.html
@@ -230,7 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/gnucash
     </amp-facebook-like>
   </div>
 
-  <h1>GnuCash</h1>
+  <h1>Dùng GnuCash để quản lý tài sản gia đình</h1>
 <div class="right">Viết lần đầu trong Tháng Hai, 2012.</div>
 <p>Tôi dùng chương trình <a href="https://www.gnucash.org/" target="_blank">GnuCash</a> để quản lý tiền và tài sản của gia đình.</p>
 <div><div class="inlineleft"><a href="https://www.gnucash.org/" target='_blank'><amp-img alt="gnucash" height="19" src="/images/gnucashbanner5df44.png" width="100" height="19" layout="fixed"></amp-img></a></div>
