--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -200,10 +200,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='protect'>Bảo-vệ tài-sản-số-hoá</a></dt>
   <dt><a href='cloudstorage'>Kinh-nghiệm dùng cloud storage</a></dt>
   <dt><a href='privcloudstor'>Hướng-dẫn làm cloud storage server</a></dt>
-  <dt><a href='pi-network'>Tiền-mật-mã Pi</a></dt>
-  <dt><a href='cryptocurrency'>Tìm-hiểu Bitcoin</a></dt>
+  <dt><a href='pi-network'>Tiền-điện-tử Pi</a></dt>
+  <dt><a href='cryptocurrency'>Hỏi đáp về Cryptocurrency</a></dt>
   <dt><a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a></dt>
-  <dt><a href='gnucash'>GnuCash</a></dt>
+  <dt><a href='gnucash'>Dùng GnuCash để quản lý tài sản gia đình</a></dt>
   <dt><a href='ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a></dt>
   <dt><a href='roaming'>Wi-Fi Roaming</a></dt>
   <dt><a href='tien-ich-di-dong'>Tiện-ích-di-động</a></dt>
@@ -217,7 +217,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='raspberrypi'>RaspberryPi</a></dt>
   <dt><a href='pin-lithium-ion'>Pin Lithium Ion</a></dt>
   <dt><a href='in-sach-nho'>In sách nhỏ</a></dt>
-  <dt><a href='linux'>Linux</a></dt>
+  <dt><a href='linux'>Vài kinh nghiệm dùng máy Linux</a></dt>
   <dt><a href='toys'>Home server cũ</a></dt>
   <dt><a href='oss'>Phần-mềm-mã-nguồn-mở</a></dt>
   <dt><a href='phan-mem-tu-do'>Phần-mềm-tự-do</a></dt>
