--- a/kinh-nghiem/may-tinh/vi-dien-tu.html
+++ b/kinh-nghiem/may-tinh/vi-dien-tu.html
@@ -492,7 +492,7 @@ data-ad-slot="3830899615">
 <p>Trong Tháng-Năm 2020, PayPal đã mở tính-năng <a href="https://www.businessinsider.com/paypal-adds-qr-code-payments-to-app-2020-5" target='_blank'>thanh-toán qua QR-code ở 28 nước</a> (không có Việt-Nam).</p>
 <h2>QR-Payment</h2>
 <p>Bên cạnh các hệ-thống-ví-điện-tử, còn có một dạng thanh-toán qua máy-điện-thoại-di-động khác là QR-Payment. Trong QR-Payment thì người-dùng phải có tài-khoản-ngân-hàng và trả-tiền thẳng từ số tiền trong tài-khoản-ngân-hàng, không có một ví-tiền bên cạnh tài-khoản.
-<br>Hệ-thống-thanh-toán QR phổ biến nhất ở Việt-Nam là của <a href="https://vnpayment.vnpay.vn/ve-chung-toi-vnpayment.htm" target='_blank'>VNPAY</a>.
+<br>Hệ-thống-thanh-toán QR phổ biến nhất ở Việt-Nam là của <a href="https://vnpayqr.vn/" target='_blank'>VNPAY</a>.
 <br>Các app của các ngân-hàng thường có chức-năng QR Payment. QR Payment tương đương như một cái thẻ debit liên kết với tài-khoản-ngân-hàng. Một số ngân-hàng (MSB, Vietcombank, TPBank, VPBank) tạo QR-code của tài-khoản-ngân-hàng trong app để người khác scan và gửi tiền vào tài-khoản-ngân-hàng đó nhanh chóng và tiện lợi như các ví-điện-tử ở trên. Nếu không có QR-code thì người dùng QR Payment không thể nhận tiền như ví-điện-tử.</p>
 <h2>Pi Network</h2>
 <p>Dự án <a href="pi-network">Pi Network</a> đang phát triển với mục tiêu trở thành một ví điện tử dựa trên blockchain với hàng tỷ người sử dụng trên khắp thế giới. Mục tiêu của Pi là trở thành ví điện tử thông dụng như MoMo, ZaloPay, AliPay, WeChat Pay để mua bán mọi thứ hàng-hoá và dịch-vụ trong đời sống hàng ngày cả mua-bán trực-tiếp lẫn mua-bán qua Internet.</p>
