--- a/y-kien/dung-hang-viet-nam.html
+++ b/y-kien/dung-hang-viet-nam.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Dùng hàng Việt Nam (Trang web LHBội)</title>
+<title>Dùng hàng Việt Nam</title>
 <meta name="description" content="Dùng hàng Việt Nam để làm lợi cho chính mình và người thân" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/dung-hang-viet-nam">
