--- a/y-kien/index.html
+++ b/y-kien/index.html
@@ -198,16 +198,16 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Những suy-nghĩ về các vấn-đề trong xã-hội</h1>
 <dl>
   <dt><a href='/y-kien/su-giau-co'>Các nguồn gốc của sự giàu có</a></dt>
-  <dt><a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a></dt>
+  <dt><a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay nghĩa là gì?</a></dt>
   <dt><a href='/y-kien/xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a></dt>
   <dt><a href='/y-kien/bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a></dt>
   <dt><a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a></dt>
   <dt><a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a></dt>
   <dt><a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a></dt>
-  <dt><a href='/y-kien/tien-va-mau'>Tiền và Máu</a></dt>
+  <dt><a href='/y-kien/tien-va-mau'>Tiền và Máu trong cuộc sống</a></dt>
   <dt><a href='/y-kien/gia-tra'>Thế giới đầy những giả trá</a></dt>
-  <dt><a href='/y-kien/nhung-cai-nem'>Những cái nêm</a></dt>
-  <dt><a href='/y-kien/khac-nguoi'>Khác người</a></dt>
+  <dt><a href='/y-kien/nhung-cai-nem'>Những cái nêm trên đường phố</a></dt>
+  <dt><a href='/y-kien/khac-nguoi'>Cư xử khác người là tốt hay xấu?</a></dt>
   <dt><a href='/y-kien/da-len-bao'>Những ý-kiến đã đăng báo</a></dt>
 </dl>
   <hr>
