--- a/y-kien/khac-nguoi.html
+++ b/y-kien/khac-nguoi.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Cư xử khác người là tốt hay xấu</title>
+<title>Cư xử khác người là tốt hay xấu?</title>
 <meta name="description" content="Có nên cư xử khác người? Cư xử khác người như thế nào?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/y-kien/khac-nguoi">
