--- a/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
+++ b/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Ước mơ thành tỉ phú</title>
+<title>Thực hiện ước mơ thành tỉ phú</title>
 <meta name="description" content="Hãy thực hiện ước mơ thành tỉ phú. Mọi người đều có thể trở thành tỉ phú một cách dễ dàng và chắc chắn." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tỉ phú">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu">
@@ -230,7 +230,7 @@ https://lehboi.github.io/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu
     </amp-facebook-like>
   </div>
 
-  <h1>Ước mơ thành tỉ phú</h1>
+  <h1>Thực hiện ước mơ thành tỉ phú</h1>
   <p><b>Làm thế nào để trở thành tỉ phú một cách chắc chắn và nhẹ nhàng?</b></p>
   <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
   <p>Bạn 25 tuổi, mới vào đời với hai bàn tay trắng, lương đủ sống. Bạn ước mơ có một tỉ đồng. Làm thế nào để có?
@@ -289,7 +289,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
