--- a/kinh-nghiem/chu-viet/index.html
+++ b/kinh-nghiem/chu-viet/index.html
@@ -198,9 +198,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Kinh-nghiệm dùng chữ Việt trên máy-tính</h1>
 <dl>
   <dt><a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1'>Vị-trí dấu-thanh</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/unicode'>Unicode</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/utf-8'>UTF-8</a></dt>
-  <dt><a href='/kinh-nghiem/chu-viet/web'>Web Việt</a></dt>
+  <dt><a href='/kinh-nghiem/chu-viet/unicode'>Chữ Việt trong Unicode</a></dt>
+  <dt><a href='/kinh-nghiem/chu-viet/utf-8'>Chữ Việt và UTF-8</a></dt>
+  <dt><a href='/kinh-nghiem/chu-viet/web'>Web Chữ Việt</a></dt>
 </dl>
   <hr>
 Hit count <amp-iframe width="120" height="30" frameborder="0"
