--- a/kinh-nghiem/may-tinh/OTT-apps.html
+++ b/kinh-nghiem/may-tinh/OTT-apps.html
@@ -153,7 +153,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
-      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
 
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
 
@@ -275,7 +275,8 @@ data-ad-slot="5275186684">
 <p>Điều đó cho thấy người-dùng cần biết cách dùng các công-cụ cho hiệu quả.
 <br>Khi tôi liên-lạc với một người lạ qua phương-tiện voice (thường là điện thoại di động) mà không được trả lời (rất thường bị như vậy) thì tôi sẽ gửi một lời nhắn text với nội dung "tự giới thiệu tôi là ai, tôi gọi về việc gì". Sau khi gửi lời-nhắn thì tôi chờ khoảng một ngày để họ kịp xem lời nhắn rồi mới gọi lại.
 <br>Đối với người đã quen-biết thì tôi cũng làm như vậy nhưng lời-nhắn sẽ ngắn hơn vì không cần giới thiệu tôi là ai.
-<br>Khi dùng lời-nhắn text thì tôi chú-ý viết cho ngắn-gọn và rõ-ràng. Ngắn-gọn để tôi đỡ tốn thời-gian gõ chữ trên máy điện-thoại, rõ-ràng để người-đọc đỡ tốn thời-gian đoán ý trong lời-nhắn. Và tôi cũng bớt phần chào-hỏi khi dùng lời-nhắn text. Thử tưởng-tượng một cuộc trao-đổi qua-lại lời-nhắn text giữa hai người bận-rộn A và B như sau:</p>
+<br>Khi dùng lời-nhắn text thì tôi chú-ý viết cho ngắn-gọn và rõ-ràng. Ngắn-gọn để tôi đỡ tốn thời-gian gõ chữ trên máy điện-thoại, rõ-ràng để người-đọc đỡ tốn thời-gian đoán ý trong lời-nhắn. Và tôi cũng bớt phần chào-hỏi khi dùng lời-nhắn text hoặc lời-nhắn bằng giọng-nói, chỉ khi nào trao-đổi trực-tiếp bằng giọng-nói thì mới có thời-gian chào-hỏi đầy-đủ, khi dùng lời-nhắn phải tranh thủ từng lần nhắn vì tôi không thể biết khi nào mới có hồi-đáp.
+Thử tưởng-tượng một cuộc trao-đổi qua-lại lời-nhắn text giữa hai người bận-rộn A và B như sau:</p>
 <ul>
   <li>A: Hi, chào B! Khoẻ không?</li>
   <li>Mười lăm phút sau, B: Hi, chào A! Tao khoẻ. Mày khoẻ không?</li>
