--- a/sitemap.html
+++ b/sitemap.html
@@ -157,28 +157,28 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/huu-ich/chi-tieu'>Chi-tiêu có kế-hoạch</a><br>
     <a href='/huu-ich/nghi-luc'>Nghị-lực để có dư tiền</a><br>
     <a href='/huu-ich/lam-phat-loi-song'>Lạm-phát-lối-sống</a><br>
-    <a href='/huu-ich/tich-luy'>Tích-luỹ-tài-sản</a><br>
+    <a href='/huu-ich/tich-luy'>Tích-luỹ tài-sản</a><br>
     <a href='/huu-ich/tich-luy-dai-han'>So-sánh công-cụ tích-luỹ-dài-hạn</a><br>
     <a href='/huu-ich/lam-giau-khong-kho'>Làm-giàu không khó</a><br>
     <a href='/huu-ich/de-tien-vao-dau'>Để tiền vào đâu</a><br>
     <a href='/huu-ich/cach-dau-tu'>Những cách đầu-tư</a><br>
     <a href='/huu-ich/dung-so-dau-tu'>Đừng sợ chữ đầu-tư</a><br>
-    <a href='/huu-ich/hieu-qua-dau-tu'>Tính hiệu-quả-đầu-tư</a><br>
-    <a href='/huu-ich/vao-dai-hoc'>Chuẩn-bị vào đại-học</a><br>
+    <a href='/huu-ich/hieu-qua-dau-tu'>Tính hiệu-quả của việc đầu-tư</a><br>
+    <a href='/huu-ich/vao-dai-hoc'>Chuẩn-bị vào đại-học và vào đời</a><br>
     <a href='/huu-ich/tien-thuong-cuoi-nam'>Tiền-thưởng cuối năm</a><br>
     <a href='/huu-ich/thong-ke-huu-tri-tu-nguyen-my'>Vài số-liệu về quỹ-hưu-trí-tự-nguyện ở Mỹ</a>
 
-      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
 
         <a href='/huu-ich/ke-hoach-tai-chinh/khtcp1'>Kế-hoạch-tích-luỹ</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/khtcp2'>Kế-hoạch-an-hưởng</a><br>
-        <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han'>Ghi-chép kết-quả-đầu-tư-dài-hạn</a><br>
+        <a href='/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han'>Cách ghi sổ khi đầu-tư dài-hạn</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/bao-ve'>Bảo-vệ nguồn-thu-nhập</a><br>
         <a href='/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap'>Tăng thu-nhập</a>
 
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
 
-        <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu'>Quỹ-đầu-tư</a><br>
+        <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu'>Tìm hiểu về Quỹ-đầu-tư</a><br>
         <a href='/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu'>Sổ-tiết-kiệm hay Quỹ-đầu-tư?</a><br>
         <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc'>Làm gì khi thị-trường xuống-dốc?</a>
 
@@ -189,10 +189,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
       <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
 
-        <a href='/huu-ich/cau-chuyen/bai-hoc-pho-thong'>Bài-học-phổ-thông</a><br>
-        <a href='/huu-ich/cau-chuyen/nhung-hon-da'>Những hòn-đá</a><br>
-        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu'>Bắt-đầu đầu-tư</a><br>
-        <a href='/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu'>Ước-mơ thành tỷ-phú</a><br>
+        <a href='/huu-ich/cau-chuyen/bai-hoc-pho-thong'>Những bài học trong chương trình phổ thông có ích không?</a><br>
+        <a href='/huu-ich/cau-chuyen/nhung-hon-da'>Những hòn-đá trong tài chính gia đình</a><br>
+        <a href='/huu-ich/cau-chuyen/bat-dau-dau-tu'>Bắt-đầu đầu-tư càng sớm càng tốt</a><br>
+        <a href='/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu'>Thực-hiện ước-mơ thành tỷ-phú</a><br>
         <a href='/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia'>Những quyết-định tốt cho tuổi-già</a><br>
         <a href='/huu-ich/cau-chuyen/nghi-huu-som'>Về-hưu trước 40 tuổi</a><br>
         <a href='/huu-ich/cau-chuyen/tranh-mang-no'>Tránh mang nợ</a><br>
@@ -208,10 +208,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/may-tinh/protect'>Bảo-vệ tài-sản-số-hoá</a><br>
       <a href='/kinh-nghiem/may-tinh/cloudstorage'>Kinh-nghiệm dùng cloud storage</a><br>
       <a href='/kinh-nghiem/may-tinh/privcloudstor'>Hướng-dẫn làm cloud storage server</a><br>
-      <a href='/kinh-nghiem/may-tinh/pi-network'>Tiền-mật-mã Pi</a><br>
-      <a href='/kinh-nghiem/may-tinh/cryptocurrency'>Tìm-hiểu Bitcoin</a><br>
+      <a href='/kinh-nghiem/may-tinh/pi-network'>Tiền-điện-tử Pi</a><br>
+      <a href='/kinh-nghiem/may-tinh/cryptocurrency'>Hỏi đáp về Cryptocurrency<</a><br>
       <a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a><br>
-      <a href='/kinh-nghiem/may-tinh/gnucash'>GnuCash</a><br>
+      <a href='/kinh-nghiem/may-tinh/gnucash'>Dùng GnuCash để quản lý tài sản gia đình</a><br>
       <a href='/kinh-nghiem/may-tinh/ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a><br>
       <a href='/kinh-nghiem/may-tinh/roaming'>Wi-Fi Roaming</a><br>
       <a href='/kinh-nghiem/may-tinh/tien-ich-di-dong'>Tiện-ích-di-động</a><br>
@@ -231,9 +231,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <h4 class="myheader"><a href='/kinh-nghiem/chu-viet/'>Chữ-Việt</a></h4>
 
       <a href='/kinh-nghiem/chu-viet/ghi-dau-thanh-1'>Vị-trí dấu-thanh</a><br>
-      <a href='/kinh-nghiem/chu-viet/unicode'>Unicode</a><br>
-      <a href='/kinh-nghiem/chu-viet/utf-8'>UTF-8</a><br>
-      <a href='/kinh-nghiem/chu-viet/web'>Web Việt</a>
+      <a href='/kinh-nghiem/chu-viet/unicode'>Chữ Việt trong Unicode</a><br>
+      <a href='/kinh-nghiem/chu-viet/utf-8'>Chữ Việt và UTF-8</a><br>
+      <a href='/kinh-nghiem/chu-viet/web'>Web Chữ Việt</a>
 
     <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
 
@@ -252,15 +252,15 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
 
     <a href='/y-kien/su-giau-co'>Các nguồn gốc của sự giàu có</a><br>
-    <a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a><br>
+    <a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay nghĩa là gì?</a><br>
     <a href='/y-kien/xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a><br>
     <a href='/y-kien/bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a><br>
     <a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a><br>
     <a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a><br>
     <a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a><br>
     <a href='/y-kien/gia-tra'>Thế giới đầy những giả trá</a><br>
-    <a href='/y-kien/nhung-cai-nem'>Những cái nêm</a><br>
-    <a href='/y-kien/khac-nguoi'>Khác người</a><br>
+    <a href='/y-kien/nhung-cai-nem'>Những cái nêm trên đường phố</a><br>
+    <a href='/y-kien/khac-nguoi'>Cư xử khác người là tốt hay xấu?</a><br>
     <a href='/y-kien/da-len-bao'>Những ý-kiến đã đăng báo</a>
 
   <h3 class="myheader">Danh mục</h3>
