--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -168,7 +168,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
-      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
 
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
 
@@ -422,6 +422,19 @@ data-ad-slot="3830899615">
   <br>Chị D nên chia số tiền đó ra làm nhiều phần bằng nhau để gửi vào quỹ đầu tư một cách đều đặn (mỗi tháng một phần) trong 3-6 tháng liên tiếp, rồi để yên đó một thời gian đủ dài (hơn 5 năm) để nó sinh lời.</p>
 
   <p>Kết quả của quỹ đầu tư cao hơn sổ tiết kiệm có vài phần trăm mỗi năm vì lãi suất tiết kiệm (và lãi suất cho vay) ở Việt Nam quá cao. Ở Singapore, gửi tiết kiệm kỳ hạn 3 năm lãi 0,65%/năm còn quỹ đầu tư cổ phiếu thì được khoảng 7,5%/năm sau 10 năm, chênh lệch gấp 10 lần. Hy vọng kinh tế Việt Nam sẽ thay đổi theo hướng đó: lãi suất ngân hàng giảm xuống để giảm chi phí cho các doanh nghiệp và người đi vay.</p>
+
+  <h2 id="goldusd">Tiết kiệm bằng USD hoặc vàng có tốt hơn không?</h2>
+  <p>Tôi giả định rằng chị U mua 100USD mỗi bốn tuần từ đầu năm 2009 đến nay chị U có 16.600
+ USD tương đương 376,322
+ triệu đồng và chị U đã bỏ ra hết 356,368
+ triệu đồng, tính ra lợi nhuận trung bình của việc tích luỹ này là 0,92%/năm
+.
+  <br>Lại giả định tiếp, từ đầu năm 2009 đến nay mỗi bốn tuần chị G dùng 100USD mua một số gram vàng lẻ đến một phần triệu gram. Đến nay chị G có 387,723
+ gram vàng, trị giá 22.290,21
+ USD. Như vậy với cùng số tiền bỏ ra như chị U, chị G thu lại được nhiều hơn 34,28%
+ và  lợi nhuận trung bình của việc tích luỹ này là 5,76%/năm
+, thấp hơn gửi tiết kiệm VND và thấp hơn tích luỹ bằng quỹ đầu tư.
+  <br>Các số liệu về tỷ giá USD-VND và giá vàng từ đầu năm 2009 đến nay được lấy từ website Vietcombank.com.vn và www.gold.org.</p>
   <p>Trang web này được cập nhật hàng tuần. Mời các bạn đến xem kết quả đầu tư mỗi tuần.</p>
 
   <div class="todiscuss">
