--- a/huu-ich/tich-luy-dai-han-3.html
+++ b/huu-ich/tich-luy-dai-han-3.html
@@ -153,7 +153,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
-      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
 
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
 
@@ -234,6 +234,7 @@ https://lehboi.github.io/huu-ich/tich-luy-dai-han
   <p>Ngoài cách hùn vốn như trên, cũng còn một cách giữ tiền khác, đó là đất. Tài nguyên đất thì có hạn trong khi nhu cầu của con người cứ tăng mãi cho nên giá của đất tăng không ngừng. Tuy nhiên không phải ai cũng có thể mua đất để làm của để dành được, nhất là những người mới bắt đầu để dành tiền. Và mua đất cũng không đơn giản như hùn vốn vào quỹ đầu tư, cho nên hãy bắt đầu bằng sổ tiết kiệm, quỹ đầu tư rồi tiếp theo là đất, hoặc là đầu tư vào các quỹ đầu tư chuyên về bất động sản.</p>
   <h3>Ngoại tệ</h3>
   <p>Cũng có người tin tưởng vào sức mạnh của đô-la Mỹ nên quyết định tích luỹ dài hạn bằng đô-la Mỹ. Nếu giữ đô-la Mỹ trong tủ thì còn dở hơn giữ vàng vì đô-la Mỹ thật sự có mất giá theo thời gian. Nếu gửi tiết kiệm bằng đô-la Mỹ thì dở hơn gửi tiết kiệm bằng tiền Việt Nam vì ngân hàng nhà nước có chính sách bảo vệ tiền Việt Nam. Tóm lại đô-la Mỹ cũng giống như vàng, chỉ thích hợp để đầu cơ chứ không thích hợp để giữ lâu dài. Ngay cả dân Mỹ cũng không gửi nhiều tiền trong các tài khoản tiết kiệm thì dân Việt Nam càng không nên (theo <a href="http://www.statisticbrain.com/american-family-financial-statistics/" target='_blank'>American Family Financial Statistics</a> trung bình số dư tài khoản tiết kiệm của dân Mỹ chỉ vào khoảng một tháng lương).</p>
+  <p>Tôi đã dùng số liệu lịch sử tỷ giá USD-VND và giá vàng tính theo USD để tính hiệu quả của việc để dành tiền bằng USD hoặc vàng từ đầu năm 2009 đến nay. Kết quả đúng theo suy luận ở trên: giữ USD và vàng dài hạn không lợi bằng gửi tiết kiệm kỳ hạn một năm. Kết quả được trình bày trong bài <a href="dau-tu-co-phieu/so-tk-hay-dau-tu#goldusd">Sổ tiết kiệm hay quỹ đầu tư</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
