--- a/kinh-nghiem/may-tinh/OTT-apps.html
+++ b/kinh-nghiem/may-tinh/OTT-apps.html
@@ -271,11 +271,11 @@ data-ad-slot="5275186684">
 </table>
 <p>Chức-năng gửi lời-nhắn bằng giọng-nói của Viber, WhatsApp, Zalo và điện-thoại di-động rất tiện. Khi bạn gọi ai đó mà họ không trả-lời thì bạn để lại lời-nhắn bằng giọng-nói để họ biết bạn cần nói về việc gì. Nhắn bằng giọng-nói tiện hơn so với nhắn bằng chữ.
 <br>Tuy-nhiên, người Việt-Nam vẫn chưa quen với việc gửi và nghe lời-nhắn bằng giọng-nói. Các thuê-bao điện-thoại di-động đã được tự-động dùng dịch-vụ hộp-thư-thoại để nhận lời-nhắn nhưng rất nhiều người lúng-túng khi nghe nhắc để lại lời-nhắn và không để lại gì hết. Vì không biết dùng dịch-vụ tiện-ích đó, họ quay lại trách công-ty điện-thoại di-động đã bày ra dịch-vụ đó để làm cho họ tốn-tiền khi gọi mà không gặp người-cần-gặp 😢.
-<br>Không những không quen để lại lời-nhắn, người Việt-Nam cũng không quen nghe lời-nhắn, tôi đã nhiều lần gửi lời-nhắn bằng giọng-nói nhưng có-vẻ như không có người-nhận nào nghe.</p>
+<br>Không những không quen để lại lời-nhắn, người Việt-Nam cũng không quen nghe lời-nhắn, tôi đã nhiều lần gửi lời-nhắn bằng giọng-nói nhưng rất ít khi được người-nhận hồi-đáp.</p>
 <p>Điều đó cho thấy người-dùng cần biết cách dùng các công-cụ cho hiệu quả.
-<br>Khi tôi liên-lạc với một người lạ qua phương-tiện voice (thường là điện thoại di động) mà không được trả lời (rất thường bị như vậy) thì tôi sẽ gửi một lời nhắn text với nội dung "tự giới thiệu tôi là ai, tôi gọi về việc gì". Sau khi gửi lời-nhắn thì tôi chờ khoảng một ngày để họ kịp xem lời nhắn rồi mới gọi lại.
-<br>Đối với người đã quen-biết thì tôi cũng làm như vậy nhưng lời-nhắn sẽ ngắn hơn vì không cần giới thiệu tôi là ai.
-<br>Khi dùng lời-nhắn text thì tôi chú-ý viết cho ngắn-gọn và rõ-ràng. Ngắn-gọn để tôi đỡ tốn thời-gian gõ chữ trên máy điện-thoại, rõ-ràng để người-đọc đỡ tốn thời-gian đoán ý trong lời-nhắn. Và tôi cũng bớt phần chào-hỏi khi dùng lời-nhắn text hoặc lời-nhắn bằng giọng-nói, chỉ khi nào trao-đổi trực-tiếp bằng giọng-nói thì mới có thời-gian chào-hỏi đầy-đủ, khi dùng lời-nhắn phải tranh thủ từng lần nhắn vì tôi không thể biết khi nào mới có hồi-đáp.
+<br>Khi tôi liên-lạc với một người lạ qua phương-tiện voice (thường là điện-thoại di-động) mà không được trả-lời (rất thường bị như vậy) thì tôi sẽ gửi một lời-nhắn text với nội-dung "tự giới-thiệu tôi là ai, tôi gọi về việc gì". Sau khi gửi lời-nhắn thì tôi chờ khoảng một ngày để họ kịp xem lời-nhắn rồi mới gọi lại.
+<br>Đối-với người đã quen-biết thì tôi cũng làm như vậy nhưng lời-nhắn sẽ ngắn hơn vì không cần giới-thiệu tôi là ai.
+<br>Khi dùng lời-nhắn text thì tôi chú-ý viết cho ngắn-gọn và rõ-ràng. Ngắn-gọn để tôi đỡ tốn thời-gian gõ chữ trên máy điện-thoại, rõ-ràng để người-đọc đỡ tốn thời-gian đoán ý trong lời-nhắn. Và tôi cũng bớt phần chào-hỏi khi dùng lời-nhắn text hoặc lời-nhắn bằng giọng-nói, chỉ khi nào trao-đổi trực-tiếp bằng giọng-nói thì mới có thời-gian chào-hỏi đầy-đủ, khi dùng lời-nhắn phải tận-dụng từng lần nhắn vì tôi không thể biết khi nào mới có hồi-đáp.
 Thử tưởng-tượng một cuộc trao-đổi qua-lại lời-nhắn text giữa hai người bận-rộn A và B như sau:</p>
 <ul>
   <li>A: Hi, chào B! Khoẻ không?</li>
