edit so-tk: gold irr

--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -283,16 +283,14 @@ data-ad-slot="3830899615">
 
   <h2>Kết quả thực tế</h2>
   <p>Trong bài này, tôi sẽ so sánh kết quả giữa hai phương tiện trên bằng những tính toán trên những số liệu thực tế trong một thời gian dài hơn 12 năm.
-  <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 
-09/09/2021
-
-là hơn 12 năm.</p>
+  <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 09/09/2021
+ là hơn 12 năm.</p>
   <p>Giả sử anh A tích luỹ tiền bằng cách gửi tiết kiệm ở ngân hàng. Bắt đầu từ đầu năm 2009, mỗi 4 tuần (mỗi năm 13 lần ứng với 13 tháng lương) anh A gửi một triệu đồng vào một sổ tiết kiệm kỳ hạn 12 tháng ở Ngân hàng Ngoại thương Việt Nam, khi đáo hạn sổ đó thì nhập lãi vào gốc để gửi tiếp kỳ mới. Số tiền anh A đã gửi vào là 166
  triệu đồng. Vào ngày 09/09/2021
  tổng giá trị gốc và lãi là <b> 254,429
  triệu đồng</b>, tính ra lợi nhuận trung bình của việc tích luỹ này là <b> 6,51%/năm
 
-</b>. Mặc dù trong 12 năm qua có những lúc lãi suất tiết kiệm lên đến 14%/năm, nhưng do anh A gửi góp theo thời gian nên những khoản tiền gửi trễ sinh ra ít tiền lãi hơn những khoản tiền gửi sớm. Lợi nhuận trung bình đó đang giảm dần vì lãi suất tiết kiệm đã thấp hơn số trung bình đó từ 7 năm nay. Số liệu tính toán <a href="https://docs.google.com/spreadsheets/d/18V3oTFprwoRy8HCdTxz9IOY2x6nqvk3-k52NguxqZhc/edit?usp=sharing" target='_blank'>ở đây</a>.</p>
+</b>. Mặc dù trong 12 năm qua có những lúc lãi suất tiết kiệm lên đến 14%/năm, nhưng do anh A gửi góp theo thời gian nên những khoản tiền gửi trễ sinh ra ít tiền lãi hơn những khoản tiền gửi sớm. Lợi nhuận trung bình đó đang giảm dần vì lãi suất tiết kiệm đã thấp hơn số trung bình đó từ 7 năm nay. Số liệu tính toán <a href="https://docs.google.com/spreadsheets/d/1br9PAhnFj5H2_XtqKL-8MjcCWTU3JP4WGf7guHMdcGo/edit#gid=1998350075" target='_blank'>trong bảng tính này</a>.</p>
 
   <p>Giả sử anh B tích luỹ tiền bằng quĩ đầu tư VF1. Bắt đầu từ đầu năm 2009 mỗi 4 tuần anh B gửi một triệu đồng vào quỹ <b>VF1</b>. Số tiền anh B đã gửi vào cũng là 166
  triệu đồng như anh A. Vào ngày 09/09/2021
@@ -431,9 +429,9 @@ data-ad-slot="3830899615">
 .
   <br>Lại giả định tiếp, từ đầu năm 2009 đến nay mỗi bốn tuần chị G dùng 100USD mua một số gram vàng lẻ đến một phần triệu gram. Đến nay chị G có 387,723
  gram vàng, trị giá 22.290,21
- USD. Như vậy với cùng số tiền bỏ ra như chị U, chị G thu lại được nhiều hơn 34,28%
+ USD. Như vậy với cùng số tiền bỏ ra như chị U, nhưng chị G thu lại được nhiều hơn 34,28%
  và  lợi nhuận trung bình của việc tích luỹ này là 5,76%/năm
-, thấp hơn gửi tiết kiệm VND và thấp hơn tích luỹ bằng quỹ đầu tư.
+, thấp hơn gửi tiết kiệm VND và thấp hơn tích luỹ bằng quỹ đầu tư. Lợi nhuận trung bình này có lẽ cũng tương đương mức trượt giá trung bình trong cùng thời gian, điều đó cho thấy tích luỹ bằng vàng không có lời.
   <br>Các số liệu về tỷ giá USD-VND và giá vàng từ đầu năm 2009 đến nay được lấy từ website Vietcombank.com.vn và www.gold.org.</p>
   <p>Trang web này được cập nhật hàng tuần. Mời các bạn đến xem kết quả đầu tư mỗi tuần.</p>
 
