--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -59,7 +59,7 @@ amp-sidebar {
 div.mwidth {max-width:1004px;margin: auto;}
 
 body {background-color:dimgray;}
-div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:white;background-color:black;font-family:sans-serif}
+div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:gainsboro;background-color:black;font-family:sans-serif}
 div.title {text-align:center;font-size:160%;font-weight:bold;color:#ffe033;font-family:serif}
 div.right {text-align:right;}
 div.lrsp {margin: 0px 5px 0px 5px;}
@@ -153,7 +153,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
-      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
 
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
 
@@ -214,20 +214,14 @@ data-ad-slot="5275186684">
 
   <div class="body">
   <div>
-    <amp-social-share type="email" height="32"></amp-social-share>
+    <amp-social-share type="system" height="32"></amp-social-share>
+    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
     <amp-social-share type="linkedin" height="32"></amp-social-share>
     <amp-social-share type="twitter" height="32"></amp-social-share>
     <amp-social-share type="tumblr" height="32"></amp-social-share>
     <amp-social-share type="line" height="32"></amp-social-share>
-    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
-    <amp-facebook-like height=32 width=90
-      layout="fixed"
-      data-layout="button_count"
-      data-href=
-https://lehboi.github.io/huu-ich/dau-tu-co-phieu/quy-dau-tu
-    >
-    </amp-facebook-like>
+    <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
   <h1>Quỹ đầu tư</h1>
@@ -399,12 +393,15 @@ data-ad-slot="3830899615">
     <li>Ban đại diện quỹ do các nhà đầu tư bầu lên sẽ theo dõi hoạt động của công ty quản lý quỹ</li>
     <li>Công ty kiểm toán độc lập sẽ định kỳ kiểm tra sổ sách của công ty quản lý quỹ</li>
   </ol>
+  <h2>Cách tính giá đơn vị quỹ đầu tư</h2>
+  <p>Tổng giá trị của một quỹ đầu tư gọi là NAV (Net Asset Value, giá trị tài sản ròng, là tổng tài sản trừ đi tổng nợ). Tài sản của một quỹ gồm có các cổ phiếu và trái phiếu mà quỹ đang sở hữu, các khoản tiền gửi ở các ngân hàng. Nợ của một quỹ là các khoản phải trả, gồm có các chi phí chưa trả, kể cả phí phải trả cho công ty quản lý quỹ. Khi giá cổ phiếu lên thì NAV của quỹ sẽ tăng lên và ngược lại.
+  <br>Giá của một đơn vị quỹ đầu tư được tính bằng cách lấy NAV chia cho tổng số đơn vị quỹ của quỹ đó. Người ta cũng thường dùng chữ NAV để chỉ giá của một đơn vị quỹ thay vì giá của toàn bộ quỹ. Tổng số đơn vị quỹ mở sẽ tăng lên khi có người mua thêm đơn vị quỹ, và giảm xuống khi có người bán đơn vị quỹ. Tổng số đơn vị quỹ đóng không thay đổi. Quỹ mở sẽ giao dịch theo giá NAV. Quỹ đóng sẽ giao dịch theo giá thoả thuận trên thị trường chứng khoán.</p>
   <h2>Mức độ rủi ro</h2>
   <p>Quỹ đầu tư vào cổ phiếu có bị lỗ giống như những người <i>chơi</i> cổ phiếu không?
   <br>Bạn có thể xem lý do thua lỗ khi <i>chơi</i> cổ phiếu trong bài <a href="../de-tien-vao-dau">Để tiền vào đâu</a>.</p>
   <p>Quỹ đầu tư không dùng vốn vay nên không bị rơi vào vòng xoáy lỗ sạch vốn như đầu cơ cổ phiếu (xem <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>).</p>
   <p>Quỹ đầu tư sẽ tăng giá và cho kết quả lời cao trong dài hạn, nhưng có vài giai đoạn ngắn giảm giá. Do đó rủi ro duy nhất của quỹ đầu tư là rủi ro ngắn hạn, cách đối phó với rủi ro đó là để tiền trong quỹ đủ lâu như đã ghi ở trên.
-  <br>Kết quả thực tế cho thấy các khoản đầu tư đều đặn dài hạn trong quỹ đầu tư VFMVF1 có lợi nhuận trung bình là 17,55%/năm
+  <br>Kết quả thực tế cho thấy các khoản đầu tư đều đặn dài hạn trong quỹ đầu tư VFMVF1 có lợi nhuận trung bình là 17,47%/năm
 .</p>
 
   <p><span class="red"><b>Chú ý</b></span>: trong những năm 2013-2014, rất nhiều người hay công ty chuyên đầu cơ ngoại tệ và vàng đã lừa gạt người khác bằng cách xưng là quỹ đầu tư, công ty vàng bạc đá quý, đầu tư uỷ thác… Hãy xem thêm bài viết về <a href="../cach-dau-tu">các cách đầu tư</a>.</p>
