--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -59,7 +59,7 @@ amp-sidebar {
 div.mwidth {max-width:1004px;margin: auto;}
 
 body {background-color:dimgray;}
-div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:white;background-color:black;font-family:sans-serif}
+div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:gainsboro;background-color:black;font-family:sans-serif}
 div.title {text-align:center;font-size:160%;font-weight:bold;color:#ffe033;font-family:serif}
 div.right {text-align:right;}
 div.lrsp {margin: 0px 5px 0px 5px;}
@@ -229,20 +229,14 @@ data-ad-slot="5275186684">
 
   <div class="body">
   <div>
-    <amp-social-share type="email" height="32"></amp-social-share>
+    <amp-social-share type="system" height="32"></amp-social-share>
+    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
     <amp-social-share type="linkedin" height="32"></amp-social-share>
     <amp-social-share type="twitter" height="32"></amp-social-share>
     <amp-social-share type="tumblr" height="32"></amp-social-share>
     <amp-social-share type="line" height="32"></amp-social-share>
-    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
-    <amp-facebook-like height=32 width=90
-      layout="fixed"
-      data-layout="button_count"
-      data-href=
-https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu
-    >
-    </amp-facebook-like>
+    <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
 <!-- body here -->
@@ -253,7 +247,7 @@ https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu
     <li>Gửi tiết kiệm ngân hàng</li>
     <li>Gửi vào <a href="quy-dau-tu">quỹ đầu tư</a></li>
   </ol>
-  <p>(Đừng mua vàng hay USD để dành, lý do được giải thích trong <a href="../tich-luy-dai-han">bài này</a>.)</p>
+  <p>(Đừng mua vàng hay USD để dành, lý do được giải thích trong phần cuối của bài này.)</p>
   <p>Các nhà kinh tế nói rằng đầu tư dài hạn vào quỹ đầu tư sẽ có lợi hơn gửi tiết kiệm ở ngân hàng. Lý thuyết đó có đúng trong thực tế không, và nhất là có đúng với thị trường Việt Nam không?</p>
 <!-- AMP In-article 1 -->
 <amp-ad
