change share buttons

--- a/index.html
+++ b/index.html
@@ -252,20 +252,14 @@ data-ad-slot="5275186684">
 
 <div class="body">
   <div>
-    <amp-social-share type="email" height="32"></amp-social-share>
+    <amp-social-share type="system" height="32"></amp-social-share>
+    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
     <amp-social-share type="linkedin" height="32"></amp-social-share>
     <amp-social-share type="twitter" height="32"></amp-social-share>
     <amp-social-share type="tumblr" height="32"></amp-social-share>
     <amp-social-share type="line" height="32"></amp-social-share>
-    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
-    <amp-facebook-like height=32 width=90
-      layout="fixed"
-      data-layout="button_count"
-      data-href=
-"https://lehboi.github.io"
-    >
-    </amp-facebook-like>
+    <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
   <h1>Giới-thiệu website LêHBội</h1>
