--- a/sitemap.html
+++ b/sitemap.html
@@ -11,18 +11,14 @@
 <link rel="canonical" href="https://lehboi.github.io/sitemap">
 <!-- in head of html file -->
 <meta charset='utf-8'>
-
-
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
-
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
 
-<script async custom-element="amp-facebook-like" src="https://cdn.ampproject.org/v0/amp-facebook-like-0.1.js"></script>
-<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+
 
 <!-- font-size https://css-tricks.com/snippets/css/fluid-typography/ -->
 <style amp-custom>
@@ -132,18 +128,14 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <div class="body">
     <div>
-<amp-social-share type="email" height="32"></amp-social-share>
+<amp-social-share type="system" height="32"></amp-social-share>
+<amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
 <amp-social-share type="whatsapp" height="32"></amp-social-share>
 <amp-social-share type="linkedin" height="32"></amp-social-share>
 <amp-social-share type="twitter" height="32"></amp-social-share>
 <amp-social-share type="tumblr" height="32"></amp-social-share>
 <amp-social-share type="line" height="32"></amp-social-share>
-<amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
-<amp-facebook-like height=32 width=90
-    layout="fixed"
-    data-layout="button_count"
-    data-href="https://lehboi.github.io/sitemap" >
-</amp-facebook-like>
+<amp-social-share type="email" height="32"></amp-social-share>
     </div>
 
     <h1>Mục-lục website LêHBội</h1>
