--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -9,22 +9,19 @@
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
-
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
+<script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
 <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
-<script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
-
-<script async custom-element="amp-facebook-like" src="https://cdn.ampproject.org/v0/amp-facebook-like-0.1.js"></script>
 <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+
 
 <!-- font-size https://css-tricks.com/snippets/css/fluid-typography/ -->
 <style amp-custom>
@@ -59,7 +56,7 @@ amp-sidebar {
 div.mwidth {max-width:1004px;margin: auto;}
 
 body {background-color:dimgray;}
-div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:white;background-color:black;font-family:sans-serif}
+div.body {max-width:1004px;margin: auto; padding-left:8px; padding-right:8px; text-align:justify;color:gainsboro;background-color:black;font-family:sans-serif}
 div.title {text-align:center;font-size:160%;font-weight:bold;color:#ffe033;font-family:serif}
 div.right {text-align:right;}
 div.lrsp {margin: 0px 5px 0px 5px;}
@@ -153,7 +150,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
-      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
+      <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
 
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
 
@@ -214,27 +211,21 @@ data-ad-slot="5275186684">
 
 <div class="body">
   <div>
-    <amp-social-share type="email" height="32"></amp-social-share>
+    <amp-social-share type="system" height="32"></amp-social-share>
+    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
     <amp-social-share type="linkedin" height="32"></amp-social-share>
     <amp-social-share type="twitter" height="32"></amp-social-share>
     <amp-social-share type="tumblr" height="32"></amp-social-share>
     <amp-social-share type="line" height="32"></amp-social-share>
-    <amp-social-share type="facebook" height="32" data-param-app_id="1879212745697311"></amp-social-share>
-    <amp-facebook-like height=32 width=90
-      layout="fixed"
-      data-layout="button_count"
-      data-href=
-https://lehboi.github.io/huu-ich/
-    >
-    </amp-facebook-like>
+    <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
 <!-- body here -->
   <h1>Những kiến-thức hữu-ích cho mọi-người</h1>
   <h2>Ổn-định cuộc-sống và làm-giàu một cách chắc-chắn</h2>
   <div class="flright"><amp-img alt="Tự-do Tài-chính" src="/images/freedom1.jpg" width="282" height="172" layout="responsive"></amp-img></div>
-  <p>Mọi-người đều cần và có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, lúc đó có muốn làm cũng không có đủ sức mà làm.
+  <p>Mọi-người đều cần và có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, vì lúc đó có muốn làm cũng không có đủ sức mà làm.
   <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.</p>
   <p><a href="../y-kien/su-giau-co">Có nhiều cách để trở-nên giàu-có</a>, nhưng đối-với <strong>đa-số</strong> người-thường trong xã-hội thì <strong>chỉ có một cách</strong> để trở-nên giàu-có là <a href="chi-tieu">chi-tiêu ít hơn số-tiền-kiếm-được</a> và tích-luỹ từ-từ.
   <br>Đa-số người-thường trong xã-hội kiếm-tiền bằng cách bán-sức-lao-động (chân-tay hay trí-óc). Một số ít người biết cách-quản-lý-đồng-tiền, làm cho nó sinh-lợi nhanh thì làm chủ.
@@ -242,7 +233,7 @@ https://lehboi.github.io/huu-ich/
   <br>Ví-dụ: một người-chủ-tiệm-tạp-hoá quản-lý được một tiệm với số vốn một trăm triệu đồng, nếu giao cho người đó một tỷ đồng, người đó không-thể quản-lý tốt mười tiệm-tạp-hoá, sẽ làm thất-thoát và thua-lỗ.
   <br>Ví-dụ khác: một giám-đốc quản-lý hiệu-quả số vốn mười tỉ đồng, nhưng khi được giao một trăm tỷ đồng sẽ đem đầu-tư không đúng chỗ gây thua-lỗ.
   <br>Một trường-hợp có thật là <a href="http://cafef.vn/toan-he-thong-the-kafe-da-dong-cua-sau-nua-nam-dao-chi-anh-dut-ao-ra-di-cai-ket-buon-cua-mot-start-up-trieu-do-20170419112201572.chn" target='_blank'>The KAfe</a>.
-  <br>Không-thể quản-lý một số-tiền quá lớn nhưng mỗi-người đều cần phải có <a href="tich-luy">một khối-tài-sản ít nhất hàng chục tỉ đồng lúc về-hưu</a>. Làm-thế-nào để cho khối-tài-sản đó sinh-lợi? Đó là <a href="de-tien-vao-dau">đầu-tư</a>. Rất nhiều người cho rằng đầu-tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu-tư bắt-đầu từ việc <a href="dung-so-dau-tu">đơn-giản nhất</a> là gửi tiết-kiệm ở ngân-hàng và tiếp-theo là những việc <a href="cach-dau-tu">hiện-đại hơn</a>.</p>
+  <br>Không-thể quản-lý một số-tiền quá lớn nhưng mỗi-người đều cần phải có <a href="tich-luy">một khối-tài-sản ít nhất hàng chục tỉ đồng lúc về-hưu</a>. Làm-thế-nào để cho khối-tài-sản đó sinh-lợi? Đó là đầu-tư. Rất nhiều người cho rằng đầu-tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu-tư bắt-đầu từ việc <a href="dung-so-dau-tu">đơn-giản nhất</a> là gửi tiết-kiệm ở ngân-hàng và tiếp-theo là những việc <a href="cach-dau-tu">hiện-đại hơn</a>.</p>
   <p>Bên-cạnh việc tích-luỹ làm gia-tăng tài-sản mỗi-người còn phải <a href="cac-loai-bao-hiem/">bảo-vệ</a> tài-sản đó trước những việc bất-ngờ không-mong-muốn.</p>
   <p>Tất-cả những việc trên có-thể được đưa vào một <a href="ke-hoach-tai-chinh/">kế-hoạch</a> rõ-ràng nhờ phần-mềm-máy-tính.</p>
 
@@ -286,7 +277,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-Hit count <amp-iframe width="120" height="30" frameborder="0" 
+Hit count <amp-iframe width="120" height="30" frameborder="0" scrolling="no"
 srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9a8e736a/0/'>">
 </amp-iframe> by <a href="https://statcounter.com" target='_blank'>statcounter.com</a>.
   <div class="footer">
